clusters/talos-pve/apps/nextcloud/onlyoffice.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice-lb
  namespace: nextcloud
  labels:
    app: onlyoffice
spec:
  type: LoadBalancer
  loadBalancerIP: 10.50.1.7
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: onlyoffice
