clusters/talos-pve/apps/nextcloud/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:latest
        ports:
        - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: nextcloud
spec:
  selector:
    app: rabbitmq
  ports:
  - port: 5672
    targetPort: 5672
  type: ClusterIP
